# cospec

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  JULES.md  LICENSE  QWEN.md  README.ja.md  README.md  Taskfile.yml  pyproject.toml
.cospec/: config.json
.rules/: GuidlineBasicRule.md  GuidlineCodingTesting.md  OverviewBasicRule.md  OverviewCodingTestingThinking.md  OverviewDesignThinking.md
.serena/: project.yml
.serena/memories/: architecture_overview.md  guidelines_and_best_practices.md  project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: BLUEPRINT.md  CLAUDE_DIARY.md  HISTORY_CONTEXT.md  OPENCODE_DIARY.md  OverviewDesignThinking.md  PLAN.md  SPEC.md  WorkingLog.md  review_20260104_161847_opencode.md  review_20260104_164400_opencode.md  review_20260104_165256_qwen.md  review_20260104_233113_qwen.md  review_20260105_230540_Qwen.md  review_20260105_231644_Qwen.md
docs/diary/: CLAUDE_DIARY.md  GEMINI_DIARY.md  JULES_DIARY.md  OPENCODE_DIARY.md  QWEN_DIARY.md
docs/report/: review_20260104_161824_qwen.md  review_20260104_161847_opencode.md  review_20260104_164200_qwen.md  review_20260104_164400_opencode.md  review_20260104_165256_qwen.md  review_20260104_170356_qwen.md  review_20260105_235500_qwen.md  review_20260109_0036_gemini.md  review_20260109_0055_gemini.md
scripts/: install-dev-tools.sh
src/cospec/: main.py
src/cospec/agents/: base.py  base_di.py  hearer.py  (+2 more)
tests/: test_agent.py  test_cli.py  test_hear.py  test_init.py  test_review.py  test_test_gen.py
tests/fixtures/: spec_ambiguous.md
(+12 files in other folders)
